--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
-
-<html lang="en">
+<html lang="en-US">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Darkstar" />
+    <meta
+      name="description"
+      content="Darkstar's solution for the QR Code Component challenge on frontendmentor.io"
+    />
+    <meta property="og:title" content="QR Code Component - Frontend Mentor" />
+    <meta
+      property="og:description"
+      content="Darkstar's solution for the QR Code Component challenge on frontendmentor.io"
+    />
+    <meta property="og:image" content="./images/screenshot_desktop.jpeg" />
+    <meta property="og:image:alt" content="screenshot of the webpage" />
 
     <link
       rel="icon"
@@ -11,30 +22,23 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-
     <link rel="stylesheet" href="styles.css" />
-
     <title>QR Code Component</title>
   </head>
 
   <body>
     <main class="card">
       <img
-        class="card__img"
+        class="card-img"
         src="./images/image-qr-code.png"
-        alt="qr-code-leads-to-frontendmentor.io"
+        alt="qr code leads to frontendmentor.io"
       />
 
-      <div class="card__content">
-        <h1>Improve your front-end skills by building projects</h1>
-        <p>
+      <div class="card-content">
+        <h1 class="card-content__heading">
+          Improve your front-end skills by building projects
+        </h1>
+        <p class="card-content__text">
           Scan the QR code to visit Frontend Mentor and take your coding skills
           to the next level
         </p>
