--- a/index.html
+++ b/index.html
@@ -8,13 +8,24 @@
       name="description"
       content="Darkstar's solution for the QR Code Component challenge on frontendmentor.io"
     />
+
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://qr-code-component-darkstarxdd.vercel.app/"
+    />
     <meta property="og:title" content="QR Code Component - Frontend Mentor" />
     <meta
       property="og:description"
       content="Darkstar's solution for the QR Code Component challenge on frontendmentor.io"
     />
-    <meta property="og:image" content="./images/screenshot_desktop.jpeg" />
-    <meta property="og:image:alt" content="screenshot of the webpage" />
+    <meta
+      property="og:image"
+      content="https://qr-code-component-darkstarxdd.vercel.app/images/screenshot_desktop.jpeg"
+    />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1440" />
+    <meta property="og:image:height" content="800" />
 
     <link
       rel="icon"
