refactor: move favicon and og to assets

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
     <meta
       property="og:image"
-      content="https://qr-code-component-darkstarxdd.vercel.app/public/og-img.jpeg"
+      content="https://qr-code-component-darkstarxdd.vercel.app/assets/images/og-img.jpeg"
     />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="QR Code Component - Frontend Mentor" />
@@ -33,7 +33,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/public/favicon-32x32.png"
+      href="/assets/images/favicon-32x32.png"
     />
   </head>
 
